--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/flamelessowo/Shuriko#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "discord.js": "^14.1.2",
     "dotenv": "^16.0.1"
   }
